--- a/AUDIO/TP1/rapport/rapport.tex
+++ b/AUDIO/TP1/rapport/rapport.tex
@@ -318,8 +318,27 @@ Panel	Vous
     On obtient $R^2 = 0.924$ pour le cas du panel, une valeur élevée. L'ajustement du modèle est donc correct. La qualité du son décroit donc avec la hauteur.
     La valeur de $R^2$ est moins élevé dans le cas "vous".}
 
-    \item{}
+    \item{On obtient des $R^2 > 0.7$ mais en utilisant quand même un modèle circulaire on obtient les tracés suivants :
 
+    \begin{figure}[H]
+        \caption{Panel}
+        \includegraphics[width=0.4\textwidth]{optim_non_lin}
+        \centering
+    \end{figure}
+
+    \begin{figure}[H]
+        \caption{Vous}
+        \includegraphics[width=0.4\textwidth]{optim_nous_non_lin}
+        \centering
+    \end{figure}
+
+    Nous n'avons malheureusement pas eu le temps de finaliser cette dernière question lors de la séance.
+        }
 \end{enumerate}
+
+\section*{Conclusion}
+
+Ainsi, lors de ce TP, nous avons pu observer les différents sons, que ce soit dans le domaine temporel ou fréquentiel. On a ensuite
+développé des méthodes subjectives et objectives reposant sur le calcul de descripteurs pour comparer ces bruits de toqué.
 
 \end{document}
