ajout elements au template

--- a/template.tex
+++ b/template.tex
@@ -14,4 +14,16 @@
 
 Un TP passionnant qui s'annonce.
 
+% \begin{figure}[H]
+%     \caption{TITRE}
+%     \includegraphics[width=\textwidth]{nom_fichier}
+%     \centering
+% \end{figure}
+
+\begin{appendices}
+
+    \section{Annexe 6}
+
+\end{appendices}
+
 \end{document}
